# ComfyUI_HBH-image_overlay

./: README.md  __init__.py  image_coordinate_picker_node.py  image_coordinate_preview_node.py  image_interactive_picker_node.py  image_overlay_node.py  image_overlay_preview_node.py  image_preview_node.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: Point editor determines coordinates.json  image combination.json
